Alignment fix

--- a/elvatorIntern/src/app/welcome/welcome.component.scss
+++ b/elvatorIntern/src/app/welcome/welcome.component.scss
@@ -6,6 +6,7 @@
     flex-direction: row;
     flex-wrap: wrap;
     align-items: center;
+    justify-content: space-between;
     gap: 2vw;
     
     .simulation {
